#summary Changelog for all changes since the fork

= Changes =
== Version 1.52 ==
  * Improvements by Igor Lyubimov (Hyphenation, better HTML-Template, performance improvements, better date/time formatting, better button navigation)
  * 

== Version 1.51 (1) ==
  * Replaced article-header with a custom actionbar-layout (click title to view the full title if it doesn't fit in the space)
  * Reduce memory usage when low-memory conditions are detected
  * Bugfixes
  * Resolved locking issue which prevented the ImageCache from ever finishing

== Version 1.50 ==
  * Fixed Issue 150: sub date/time options in preferences menu do not auto-disable
  * Fixed Issue 151: handling of disabled date/time format string
  * Fixed Issue 155: category totals often don't update correctly
  * Fixed Issue 140: View image captions (longpress on image)
  * Fixed rotation of article with dark background
  * Fixed Issue 145: starred list won't fully sync
  * Temporary workaround for Issue 144: No menu button when viewing articles

== Version 1.49 ==
  * Added a preference to "Invert browsing articles"
  * Fixed problems with the new preference-dialog
  * Added confirmation dialog to unsubscribe from feed
  
== Version 1.48 (1) ==
  * New Preference-Layout, new Icons, fixed compatibility with old devices
  * Fixed progressbar for ImageCache
  * Fixed Exceptions when returning from article
  * Fixed problem with ImageCache
  * Added spanish translation (thanks to Eduardo Ruiz from http://www.edubox.org)

== Version 1.47 (2) ==
  * Fixed Activity-Indicators
  * Implemented "Subscribe to Feed" and "Unsubscribe" (only Server > 1.7.6)
  * Added Paste-Button for URLs in Subscribe-View
  * Dark background now without white border
  * Link-color for dark background set to light blue
  * Articleheader layout and borders fixed
  * Removed unnecessary preferences
  * Bugfixes

== Version 1.46 (3) ==
  * Fixed bugs in new connection method